--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <img src="static/maria3.jpg" onload="this.style.opacity=1">
         </div>
         <div class="header-right">
-            <span class="name">Maria Pinkowska-Porzycka</span>
-            <div class="subtitle">Type + DTP</div>
+            <span class="name">Maria Pinkowska&#x2011;Porzycka</span>
+            <div class="subtitle">Type&nbsp;+&nbsp;DTP</div>
             <div class="info">
                 <div><strong>E-mail:</strong> </div>
                 <div>
-                    <button class="plain-button" id="email-link" onclick="mailto()">napisz</button> lub 
-                    <button class="plain-button" id="email-copy" onclick="copyEmailToClipboard()">skopiuj do schowka</button>
+                    <button class="plain-button" id="email-link" onclick="mailto()">napisz</button>
+                    lub&nbsp;<button class="plain-button" id="email-copy" onclick="copyEmailToClipboard()">skopiuj do schowka</button>
                 </div>
                 <div><strong>Linkedin: </strong></div>
                 <div><a href="https://www.linkedin.com/in/maria-pinkowska-porzycka">linkedin.com/in/maria-pinkowska-porzycka</a></div>
