--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="header-right">
             <span class="name">Maria Pinkowska&#x2011;Porzycka</span>
-            <div class="subtitle">Type&nbsp;+&nbsp;DTP</div>
+            <div class="subtitle">Type&nbsp;/&nbsp;Illustration</div>
             <div class="info">
                 <div><strong>E-mail:</strong> </div>
                 <div>
@@ -78,6 +78,15 @@
     <div class="content" id="content">
         <div class="row">
             <div class="column">
+                <img src="static/kos_2.jpg" alt="Pejzaż" onload="this.style.opacity=1">
+            </div>
+            <div class="column">
+                <img src="static/cypr_2.jpg" alt="Pejzaż" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
                 <img src="static/bruit_1.png" alt="Font Bruit" onload="this.style.opacity=1">
                 <img src="static/bruit_2.png" alt="Font Bruit" onload="this.style.opacity=1">
                 <img src="static/bruit_3.png" alt="Font Bruit" onload="this.style.opacity=1">
@@ -85,6 +94,7 @@
             <div class="column">
                 <img src="static/bruit_4.png" alt="Font Bruit" onload="this.style.opacity=1">
                 <img src="static/bruit_5.png" alt="Font Bruit" onload="this.style.opacity=1">
+                <img src="static/modern.jpg" alt="Font Bruit" onload="this.style.opacity=1">
             </div>
         </div>
 
@@ -117,10 +127,22 @@
 
         <div class="row">
             <div class="column">
-                <img src="static/plakaty.jpg" alt="Plakaty" onload="this.style.opacity=1">
+                <img src="static/jazz_nad_odra_2.jpg" alt="Plakat Jazz nad Odrą" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="static/plakaty_big.jpg" alt="Plakaty" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="static/swieto_wroclawia.jpg" alt="Plakat Święto Wrocławia" onload="this.style.opacity=1">
             </div>
             <div class="column">
-                <img src="static/swieto_wroclawia.jpg" alt="Plakaty" onload="this.style.opacity=1">
+                <img src="static/swieto_wroclawia_2.jpg" alt="Plakat Święto Wrocławia" onload="this.style.opacity=1">
             </div>
         </div>
 
@@ -138,6 +160,12 @@
 
         <div class="row">
             <div class="column">
+                <img src="static/kardynal.jpg" alt="Książka" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
                 <img src="static/portf_3.jpg" alt="Kalendarz" onload="this.style.opacity=1">
             </div>
         </div>
@@ -147,7 +175,25 @@
                 <img src="static/obraz.jpg" alt="Portret" onload="this.style.opacity=1">
             </div>
             <div class="column">
-                <img src="static/cypr.png" alt="Pejzaż" onload="this.style.opacity=1">
+                <img src="static/borewicz.jpg" alt="Portret" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="static/rzymianin.jpg" alt="Pejzaż" onload="this.style.opacity=1">
+            </div>
+            <div class="column">
+                <img src="static/riche.jpg" alt="Pejzaż" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="static/kos_1.jpg" alt="Pejzaż" onload="this.style.opacity=1">
+            </div>
+            <div class="column">
+                <img src="static/cypr.jpg" alt="Pejzaż" onload="this.style.opacity=1">
             </div>
         </div>
 
@@ -155,8 +201,26 @@
             <div class="column">
                 <img src="static/sr.jpg" alt="Samych Radości" onload="this.style.opacity=1">
             </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="static/ladi.jpg" alt="ladi.poli" onload="this.style.opacity=1">
+            </div>
             <div class="column">
                 <img src="static/zaproszenie.jpg" alt="Zaproszenie" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="static/navireo_2.jpg" alt="Navireo" onload="this.style.opacity=1">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <img src="static/navireo.jpg" alt="Navireo" onload="this.style.opacity=1">
             </div>
         </div>
     </div>
